<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="actionbar_share">Share</string>
    <string name="actionbar_web_search">Web search</string>
    <string name="media_player_error_title">Cannot play video</string>
    <string name="media_player_error_text_invalid_progressive_playback">Sorry, this video is not valid for streaming to this device.</string>
    <string name="media_player_error_text_unknown">Sorry, this video cannot be played.</string>
    <string name="media_player_error_button">OK</string>
    <string name="media_player_loading_video">Loading video</string>
    <string name="profiler_started_toast">Profiler started</string>
    <string name="profiler_stopped_toast">Profiler finished. Results are in %1$s.</string>
    <string name="profiler_no_storage_toast">Can\'t start profiler because external storage is not ready</string>
    <string name="profiler_error_toast">Failed to start profiler</string>
    <string name="low_memory_error">Unable to complete previous operation due to low memory</string>
    <string name="opening_file_error">Failed to open selected file</string>
    <string name="color_picker_button_more">More</string>
    <string name="color_picker_hue">Hue</string>
    <string name="color_picker_saturation">Saturation</string>
    <string name="color_picker_value">Value</string>
    <string name="color_picker_button_set">Set</string>
    <string name="color_picker_button_cancel">Cancel</string>
    <string name="color_picker_dialog_title">Select color</string>
    <string name="color_picker_button_red">Red</string>
    <string name="color_picker_button_cyan">Cyan</string>
    <string name="color_picker_button_blue">Blue</string>
    <string name="color_picker_button_green">Green</string>
    <string name="color_picker_button_magenta">Magenta</string>
    <string name="color_picker_button_yellow">Yellow</string>
    <string name="color_picker_button_black">Black</string>
    <string name="color_picker_button_white">White</string>
    <string name="copy_to_clipboard_failure_message">Failed to copy to the clipboard</string>
    <string name="accessibility_date_picker_month">Month</string>
    <string name="accessibility_date_picker_year">Year</string>
    <string name="date_picker_dialog_set">Set</string>
    <string name="month_picker_dialog_title">Set month</string>
    <string name="accessibility_date_picker_week">Week</string>
    <string name="week_picker_dialog_title">Set week</string>
    <string name="time_picker_dialog_am">AM</string>
    <string name="time_picker_dialog_pm">PM</string>
    <string name="time_picker_dialog_title">Set time</string>
    <string name="accessibility_time_picker_hour">Hour</string>
    <string name="accessibility_time_picker_minute">Minute</string>
    <string name="accessibility_time_picker_second">Second</string>
    <string name="accessibility_time_picker_milli">Millisecond</string>
    <string name="accessibility_time_picker_ampm">AM/PM</string>
    <string name="time_picker_dialog_hour_minute_separator">:</string>
    <string name="time_picker_dialog_minute_second_separator">:</string>
    <string name="time_picker_dialog_second_subsecond_separator">.</string>
    <string name="date_time_picker_dialog_title">Set date and time</string>
    <string name="accessibility_datetime_picker_date">Date</string>
    <string name="accessibility_datetime_picker_time">Time</string>
    <string name="date_picker_dialog_other_button_label">Other</string>
    <string name="date_picker_dialog_title">Set date</string>
    <string name="date_picker_dialog_clear">Clear</string>
    <string name="js_alert_title">Javascript Alert</string>
    <string name="js_confirm_title">Javascript Confirm</string>
    <string name="js_prompt_title">Javascript Prompt</string>
    <string name="download_start_toast">Downloading file:</string>
    <string name="download_no_permission_toast">No permission to write, abort.</string>
    <string name="download_already_exists_toast">Downloading file already exists, abort.</string>
    <string name="download_failed_toast">Failed to download file.</string>
    <string name="download_finished_toast">Finished to download file.</string>
    <string name="ssl_alert_title">Ssl Certificate Error Alert</string>
    <string name="http_auth_title">Authentication Required</string>
    <string name="http_auth_user_name">Username</string>
    <string name="http_auth_password">Password</string>
    <string name="http_auth_log_in">Log In</string>
    <string name="cpu_arch_mismatch_title">Mismatch of CPU architecture for Crosswalk</string>
    <string name="cpu_arch_mismatch_message">Unfortunately this application was not created for %1$s based devices, please take a moment to notify the developer about it. Thanks.</string>
    <string name="goto_store_button_label">Go to Google Play Store</string>
    <string name="report_feedback_button_label">Report to developer</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">This app won\'t run without Google Play services, which are missing from your phone.</string>
    <string name="common_google_play_services_install_text_tablet">This app won\'t run without Google Play services, which are missing from your tablet.</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">This app won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">This app won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_date_text">The date on the device appears to be incorrect. Please check the date on the device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="com_facebook_dialogloginactivity_ok_button">OK</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_log_in_button">Log in with Facebook</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_logo_content_description">Facebook Logo</string>
    <string name="com_facebook_usersettingsfragment_log_in_button">Log in…</string>
    <string name="com_facebook_usersettingsfragment_logged_in">Logged in</string>
    <string name="com_facebook_usersettingsfragment_not_logged_in">Not logged in</string>
    <string name="com_facebook_placepicker_subtitle_format">%1$s • %2$,d were here</string>
    <string name="com_facebook_placepicker_subtitle_catetory_only_format">%1$s</string>
    <string name="com_facebook_placepicker_subtitle_were_here_only_format">%1$,d were here</string>
    <string name="com_facebook_picker_done_button_text">Done</string>
    <string name="com_facebook_choose_friends">Choose Friends</string>
    <string name="com_facebook_nearby">Nearby</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_requesterror_web_login">Your Facebook account is locked. Please log into www.facebook.com to continue.</string>
    <string name="com_facebook_requesterror_relogin">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
    <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
    <string name="com_facebook_tooltip_default">New! You\'re in control - choose what info you want to share with apps.</string>
    <string name="ga_trackingId">UA-27433056-4</string>
    <string name="com.crashlytics.android.build_id">d0166822-65c3-44e9-8757-3408a6009689</string>
    <string name="app_name">Forces Of War</string>
    <string name="loading">Loading</string>
    <string name="homeTabBarItem">Home</string>
    <string name="missionsTabBarItem">Missions</string>
    <string name="battleTabBarItem">Battle</string>
    <string name="itemsTabBarItem">Armory</string>
    <string name="empireTabBarItem">Bases</string>
    <string name="bountyTabBarItem">Bounty</string>
    <string name="allianceTabBarItem">Allies</string>
    <string name="scienceLabTabBarItem">Black Market</string>
    <string name="profileTabBarItem">Profile</string>
    <string name="healTabBarItem">Medic</string>
    <string name="vaultTabBarItem">Bank</string>
    <string name="resetTabBarItem">Reset</string>
    <string name="facebook_app_id">5161289059</string>
</resources>
