<?xml version="1.0" encoding="utf-8"?>
<com.uken.android.common.LinearLayoutThatDetectsSoftKeyboard xmlns:android="http://schemas.android.com/apk/res/android" xmlns:loginView="http://schemas.android.com/apk/res-auto" android:gravity="center_horizontal" android:orientation="vertical" android:id="@+id/main" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:layout_gravity="center" android:id="@+id/splashRelativeView" android:padding="0px" android:layout_width="match_parent" android:layout_height="match_parent">
        <ProgressBar android:id="@+id/progressBar" android:visibility="gone" android:layout_width="match_parent" android:layout_height="4dp" android:indeterminate="false" android:layout_alignParentTop="true" style="?android:attr/progressBarStyleHorizontal"/>
        <VideoView android:id="@+id/splashVideo" android:visibility="visible" android:layout_width="match_parent" android:layout_height="match_parent" android:scaleType="centerCrop" android:layout_centerInParent="true"/>
        <ImageView android:id="@+id/splashScreen" android:visibility="visible" android:layout_width="match_parent" android:layout_height="match_parent" android:src="@drawable/splash" android:scaleType="centerInside"/>
    </RelativeLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_weight="1.71">
        <org.xwalk.core.internal.XWalkViewInternal android:id="@+id/webView" android:layout_width="match_parent" android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout android:gravity="bottom" android:orientation="horizontal" android:id="@+id/tabBarLinearView" android:background="@drawable/button_background" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="0.04">
        <Button android:textSize="9dp" android:textStyle="bold" android:textColor="#ffffff" android:gravity="center" android:id="@+id/homeTabButton" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/homeTabBarItem" android:drawableTop="@drawable/home_button" android:layout_weight="0.2"/>
        <Button android:textSize="9dp" android:textStyle="bold" android:textColor="#ffffff" android:gravity="center" android:id="@+id/missionsTabButton" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/missionsTabBarItem" android:drawableTop="@drawable/missions_button" android:layout_weight="0.2"/>
        <Button android:textSize="9dp" android:textStyle="bold" android:textColor="#ffffff" android:gravity="center" android:id="@+id/battleTabButton" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/battleTabBarItem" android:drawableTop="@drawable/battle_button" android:layout_weight="0.2"/>
        <Button android:textSize="9dp" android:textStyle="bold" android:textColor="#ffffff" android:gravity="center" android:id="@+id/itemsTabButton" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/itemsTabBarItem" android:drawableTop="@drawable/items_button" android:layout_weight="0.2"/>
        <Button android:textSize="9dp" android:textStyle="bold" android:textColor="#ffffff" android:gravity="center" android:id="@+id/empireTabButton" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/empireTabBarItem" android:drawableTop="@drawable/empire_button" android:layout_weight="0.2"/>
        <Button android:textSize="9dp" android:textStyle="bold" android:textColor="#ffffff" android:gravity="center" android:id="@+id/resetTabButton" android:background="@android:color/transparent" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/resetTabBarItem" android:drawableTop="@drawable/reset_button" android:layout_weight="0.2"/>
    </LinearLayout>
</com.uken.android.common.LinearLayoutThatDetectsSoftKeyboard>
